// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It renders correctly 1`] = `
<div
  className="idea"
>
  <h2
    className="title"
  >
    Title
  </h2>
  <time
    className="date"
  >
    12:56 
    31-4-2017
  </time>
  <ul
    className="sections"
  />
  <nav
    className="nav"
  >
    <Link
      className="button"
      replace={false}
      to="/ideas/:id/edit"
    >
      Edit
    </Link>
    <Link
      className="button"
      replace={false}
      to="/ideas"
    >
      Close
    </Link>
  </nav>
</div>
`;

exports[`It renders correctly with content 1`] = `
<div
  className="idea"
>
  <h2
    className="title"
  >
    Title
  </h2>
  <time
    className="date"
  >
    12:56 
    31-4-2017
  </time>
  <div
    className="content"
  >
    <p>
      row 1
    </p>
    <p>
      		row 2
    </p>
  </div>
  <ul
    className="sections"
  />
  <nav
    className="nav"
  >
    <Link
      className="button"
      replace={false}
      to="/ideas/:id/edit"
    >
      Edit
    </Link>
    <Link
      className="button"
      replace={false}
      to="/ideas"
    >
      Close
    </Link>
  </nav>
</div>
`;
